# nyc-apartment-hunt

./: .gitignore  LICENSE  README.md  config.example.toml  pyproject.toml
skill/: SKILL.md
src/nyc_hunt/: cli.py  config.py  emailer.py  models.py  report.py  score.py  tracker.py
src/nyc_hunt/sources/: __init__.py  craigslist.py  http.py  renthop.py
tests/: test_cli.py  test_config.py  test_craigslist.py  test_models.py  test_renthop.py  test_report.py  test_score.py  test_tracker.py
tests/fixtures/: craigslist_search.html  renthop_search.html
