[project]
name = "nyc-apartment-hunt"
version = "0.1.0"
description = "Automated NYC apartment hunt — Python scrapers for Craigslist/RentHop plus a Claude Code skill for StreetEasy/Zillow"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = []

[project.scripts]
nyc-hunt = "nyc_hunt.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nyc_hunt"]

[dependency-groups]
dev = ["pytest>=8"]
